# nexus_aggregator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  API_GUIDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  renovate.json
.cursor/rules/: python-bp.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  run-build.yml  run-static.yml  run-tests.yml
docs/: DETECT_SECRETS_GUIDE.md  RENOVATE.md  detect-secrets.md
src/nexus/: __init__.py  main.py
src/nexus/core/: __init__.py  config.py  db.py
src/nexus/posts/: __init__.py  models.py  router.py  schemas.py  service.py
src/nexus/providers/: __init__.py  base.py  hn.py  rss.py  service.py
tests/: __init__.py  conftest.py
tests/posts/: __init__.py  test_router.py  test_service.py
tests/providers/: __init__.py  test_hn.py  test_rss.py
